[package]
name = "gms_binder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# proc-macro = true
[lib]
crate_type=["proc-macro"]

[dependencies]
quote = "1.0"
syn = {version = "1.0", features = ["full"]}
lazy_static = "1.4"
